--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class=".inter-font">
+<body class="inter-font">
 
     <!-- navbar-section -->
         <nav class="navbar">
@@ -24,8 +24,24 @@
             <li>Host</li>
         </ul>
         <button class="nav-button">Subscribe<i class="fa-solid fa-arrow-right"></i></button>
-        <div></div>
+
+        <div class="hamburger">
+      <i class="fa-solid fa-bars"></i>
+    </div>
     </nav>
+    <!-- main-section -->
+     <main>
+        <section class="hero-container">
+            <div class="hero-inner-container">
+                <div class="mic-wrapper">
+                    <img src="./assets/hero-circle.png" alt="" class="hero-circle">
+                    <img src="./assets/microphone.png" alt="" class="microphone">
+                    <button class="btn-new">NEW</button>
+                </div>
+            </div>
+
+        </section>
+     </main>
+
 </body>
 </html>
-
