--- a/index.html
+++ b/index.html
@@ -31,16 +31,28 @@
     </nav>
     <!-- main-section -->
      <main>
-        <section class="hero-container">
-            <div class="hero-inner-container">
-                <div class="mic-wrapper">
-                    <img src="./assets/hero-circle.png" alt="" class="hero-circle">
-                    <img src="./assets/microphone.png" alt="" class="microphone">
-                    <button class="btn-new">NEW</button>
-                </div>
-            </div>
+    <section class="hero-container">
+    <div class="hero-inner-content">
+        <div class="mic-wrapper">
+            <img src="./assets/hero-circle.png" class="hero-circle" alt="Circle">
+            <img src="./assets/microphone.png" class="mic-icon" alt="Microphone">
+            <button class="btn-new">NEW</button>
+        </div>
 
-        </section>
+        <div class="hero-text">
+            <h1>TechWave</h1>
+            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+            <div class="hero-btns">
+                <button class="btn-spotify">
+                    <img src="./assets/spotify.png" alt="">  Listen on Spotify
+                </button>
+                <button class="btn-subscribe">
+                    <img src="./assets/message.png" alt=""> Subscribe
+                </button>
+            </div>
+        </div>
+    </div>
+</section>
      </main>
 
 </body>
